smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-must-come-after-namespace.smithy
// Syntax error at line 4, column 1: Expected a namespace definition but found IDENTIFIER('use') | Model
$version: "2.0"

use smithy.example#Foo

namespace com.foo

string MyString
